[package]
name = "rray"
version = "0.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
anyhow = "1.0.32"
indicatif = {version="0.15.0", features=["rayon"]}
rayon ="1.4.0"
nalgebra = "0.22.0"
rand = "0.7.3"
rand_distr = "0.3.0"
clap = "2.33.3"
bvh = "0.3.2"

[profile.release]
debug = true
